<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuestionarioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#AF8CE6"
            android:contentDescription="@string/titulo_cuestionario"
            android:src="@drawable/ic_banner_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="352dp"
            android:layout_height="51dp"
            android:ems="10"
            android:fontFamily="@font/press_start_2p"
            android:hint="Introduce tu nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <RadioGroup
            android:id="@+id/radioGroup_respuestas"
            android:layout_width="295dp"
            android:layout_height="198dp"
            app:layout_constraintBottom_toTopOf="@+id/boton_aceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPregunta"
            app:layout_constraintVertical_bias="0.246">

            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/librer_a_de_menus" />

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/librer_a_de_navegaci_n" />

            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/librer_a_de_dise_o" />

            <RadioButton
                android:id="@+id/radio_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/librer_as_de_navegaci_n_y_menus" />

        </RadioGroup>

        <TextView
            android:id="@+id/textPregunta"
            android:layout_width="278dp"
            android:layout_height="66dp"
            android:layout_marginTop="28dp"
            android:text="@string/qu_librer_a_estamos_trabajando"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.383"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.139" />

        <Button
            android:id="@+id/boton_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/aceptar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->

</FrameLayout>